feat: add responsive design for graphic design and project management pages
- Implement mobile and desktop views for project galleries
- Add interactive toggle functionality for project details
- Update styling and color schemes for consistency
- Include new project placeholder images
- Add JavaScript for interactive elements

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </div>
   </section>
-  <section id="projects" class="bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 flex flex-col gap-8 justify-center items-center pt-10 pb-14">
+  <section id="projects" class="projects-mobile bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 flex lg:hidden flex-col gap-8 justify-center items-center pt-10 pb-14">
 
     <h1 class="text-2xl lg:text-4xl font-bold mx-6 lg:mx-64">My Recent Work</h1>
     <p class="text-center lg:text-xl text-1 font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
@@ -99,6 +99,120 @@
 
       <!-- Project Management Card -->
       <a href="pages/project-management.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group project-management liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center h-1/4">
+          <iconify-icon icon="mdi:briefcase-account-outline" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+        </div>
+        <div class="flex items-center justify-center h-full">
+          <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
+            <span class="inline-block transition-all duration-500">P</span>
+            <span class="inline-block transition-all duration-500">r</span>
+            <span class="inline-block transition-all duration-500">o</span>
+            <span class="inline-block transition-all duration-500">j</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">c</span>
+            <span class="inline-block transition-all duration-500">t</span>
+            <br>
+            <span class="inline-block transition-all duration-500">M</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">n</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">g</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">m</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">n</span>
+            <span class="inline-block transition-all duration-500">t</span>
+          </h1>
+        </div>
+      </a>
+    </div>
+    <div class="skill-selector-mobile px-2 flex lg:hidden flex-row justify-center w-full gap-2">
+      
+      <!-- Graphic Design Card -->
+      <a href="pages/graphic-design.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center items-center">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit p-4"></iconify-icon>
+        </div>
+        <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
+          <span class="inline-block">G</span>
+          <span class="inline-block">r</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">p</span>
+          <span class="inline-block">h</span>
+          <span class="inline-block">i</span>
+          <span class="inline-block">c</span>
+          <br class="mt-2">
+          <span class="inline-block">D</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">s</span>
+          <span class="inline-block">i</span>
+          <span class="inline-block">g</span>
+          <span class="inline-block">n</span>
+        </h1>
+      </a>
+
+      <!-- Project Management Card -->
+      <a href="pages/project-management.html" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 justify-center items-center rounded-2xl w-1/2 gap-10 shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center items-center">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit p-4"></iconify-icon>
+        </div>
+        <h1 class="text-lg text-center font-semibold leading-none uppercase pb-8">
+
+          <span class="inline-block">P</span>
+          <span class="inline-block">r</span>
+          <span class="inline-block">o</span>
+          <span class="inline-block">j</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">c</span>
+          <span class="inline-block">t</span>
+          <br class="mt-2">
+          <span class="inline-block">m</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">n</span>
+          <span class="inline-block">a</span>
+          <span class="inline-block">g</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">m</span>
+          <span class="inline-block">e</span>
+          <span class="inline-block">n</span>
+          <span class="inline-block">t</span>
+        </h1>
+      </a>
+    </div>
+  </section>  
+  <section id="projects" class="projects-pc bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 hidden lg:flex flex-col gap-8 justify-center items-center pt-10 pb-14">
+
+    <h1 class="text-2xl lg:text-4xl font-bold mx-6 lg:mx-64">My Recent Work</h1>
+    <p class="text-center lg:text-xl text-1 font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
+    <div class="mt-8 skill-selector-pc hidden lg:flex flex-row justify-center w-full gap-2 lg:px-10">
+      
+      <!-- Graphic Design Card -->
+      <a href="pages/graphic-design-pc.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group graphic-design liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
+        <div class="w-full flex justify-center h-1/4">
+          <iconify-icon icon="streamline-cyber:design-mug" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit h-fit p-4"></iconify-icon>
+        </div>
+        <div class="flex items-center justify-center h-full">
+          <h1 class="text-xl text-center font-semibold leading-none uppercase transition-all duration-500 ease-in-out">
+            <span class="inline-block transition-all duration-500">G</span>
+            <span class="inline-block transition-all duration-500">r</span>
+            <span class="inline-block transition-all duration-500">a</span>
+            <span class="inline-block transition-all duration-500">p</span>
+            <span class="inline-block transition-all duration-500">h</span>
+            <span class="inline-block transition-all duration-500">i</span>
+            <span class="inline-block transition-all duration-500">c</span>
+            <br>
+            <span class="inline-block transition-all duration-500">D</span>
+            <span class="inline-block transition-all duration-500">e</span>
+            <span class="inline-block transition-all duration-500">s</span>
+            <span class="inline-block transition-all duration-500">i</span>
+            <span class="inline-block transition-all duration-500">g</span>
+            <span class="inline-block transition-all duration-500">n</span>
+          </h1>
+        </div>
+      </a>
+
+      <!-- Project Management Card -->
+      <a href="pages/project-management-pc.html" style="grid-template-rows: 0.2fr 0.8fr;" class="group project-management liquid-glass-2 py-6 grid grid-rows-2 rounded-2xl lg:w-2/5 lg:hover:w-2/3 gap-10 transition-all duration-500 ease-in-out min-h-[16rem] shadow-2xs shadow-gray-500">
         <div class="w-full flex justify-center h-1/4">
           <iconify-icon icon="mdi:briefcase-account-outline" class="text-blue-950 text-xl bg-blue-200 rounded-2xl w-fit h-fit p-4"></iconify-icon>
         </div>
