--- a/pages/project-management.html
+++ b/pages/project-management.html
@@ -9,7 +9,7 @@
   <title>Techqueen Project Management Portfolio</title>
 </head>
 <body class="bg-[#f2f2f2] font-[rubik] pt-28 lg:pt-40">
-  <header class="navigation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-20 lg:mx-64 h-14 lg:h-16 liquid-glass flex flex-row justify-center items-center rounded-4xl px-6">        
+  <header class="navigation fixed top-4 lg:top-6 left-0 right-0 z-50 mx-20 lg:mx-64 h-14 lg:h-16 liquid-glass shadow-xs shadow-gray-300 flex flex-row justify-center items-center rounded-4xl px-6">        
       <a class="nav-link w-2/5 lg:h-12 flex lg:hidden items-center justify-center bg-[#ffffff] rounded-3xl px-2 py-2" href="../index.html">
         <div class="w-full h-8 bg-cover  lg:bg-contain bg-center bg-no-repeat" style="background-image: url('../images/logo\ design/Favicon_00000.png');"></div>
       </a> 
@@ -18,12 +18,163 @@
       </a>   
   </header>
 
+  <section class="graphic-design-section px-4 w-full flex lg:hidden flex-col gap-4">
+
+    <h1 class="text-3xl lg:text-4xl font-bold mx-6 lg:mx-64 text-center">Project Management</h1>
+    <p class="text-center lg:text-xl text-1 font-[poppins] mx-3 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-red-600">Email me.</a></p>
+
+    <div class="graphic-design-gallery mt-3 w-full flex flex-col gap-5">
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+
+      <div class="graphic-des-item w-full flex flex-col">
+        <!-- IMAGE -->
+        <div
+          class="img-container toggle-btn rounded-3xl bg-cover bg-center bg-no-repeat h-56 relative z-10 cursor-pointer transition-all duration-300 ease-in-out" style="background-image: url('../images/project\ management\ placeholder_00000.jpg');">
+        </div>
+
+        <!-- DETAILS -->
+        <div class="details no-transition opacity-0 translate-y-[-100%] h-0 overflow-hidden">
+          <div class="img-container bg-[#650808] rounded-b-3xl flex flex-col justify-center items-center gap-2 w-full h-full relative z-0">
+            <h2 class="project-title mt-6 text-white text-2xl font-bold">Project Title</h2>
+            <p class="project-desc px-2 text-white text-lg text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga, voluptas.</p>
+            <a href="#" class="view-project-btn mb-4">
+              <button class="px-4 py-2 border-2 border-yellow-700 hover:bg-yellow-700 text-white hover:text-yellow-950 text-lg font-semibold rounded-3xl">View Project</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <section class="mt-4 lg:mt-8 flex flex-row justify-center items-center border-2 border-[#650808] hover:bg-[#650808] text-[#650808] hover:text-white transition-all duration-500 rounded-3xl mx-14 lg:mx-96 px-4 py-2 gap-2">
     <iconify-icon icon="mdi:instagram" class="text-3xl"></iconify-icon>
     <a href="#" target="_blank" class="">See more on Instagram</a>
   </section>
-  <footer class="mt-6 flex flex-col justify-center items-center bg-[#267194] w-full px-6 pt-60 pb-20">
+  <footer class="mt-6 flex flex-col justify-center items-center bg-[#942626] w-full px-6 pt-60 pb-20">
     <img class="w-32 lg:w-64 h-32 lg:h-64" src="/images/logo design/logomark_00000.png" alt="">
     <p class="text-lg lg:text-xl text-[#f2f2f2] text-center font-[poppins]">Designing with Vision, Leading with Purpose.</p>
     <div class="mt-10 socials flex gap-3 lg:gap-6">
@@ -50,6 +201,7 @@
     <p class="mt-6 lg:text-lg text-[#f2f2f2] text-center font-[poppins]">© 2023 Techqueen. All rights reserved.</p>
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
+  <script src="/scripts/project-management.js"></script>
   <script src="/scripts/index.js"></script>
 </body>
 </html>
