build: add graphic-design.js script to graphic-design page
Include the graphic-design.js script in the graphic-design.html page to enable page-specific functionality

--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -201,6 +201,7 @@
     <p class="mt-6 lg:text-lg text-[#f2f2f2] text-center font-[poppins]">© 2023 Techqueen. All rights reserved.</p>
   </footer>
   <script src="https://code.iconify.design/iconify-icon/1.0.8/iconify-icon.min.js"></script>
+  <script src="/scripts/graphic-design.js"></script>
   <script src="/scripts/index.js"></script>
 </body>
 </html>
