feat(ui): improve responsive navigation and button styling
- Add mobile/desktop variants for Projects nav link
- Update submit button styling with new colors and spacing
- Add new color variables and utility classes for dark mode

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#about">
         <p>About</p>
       </a>      
-      <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
+      <a class="nav-link w-1/5 lg:h-12 flex lg:hidden items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects">
+        <p>Projects</p>
+      </a>    
+      <a class="nav-link w-1/5 lg:h-12 hidden lg:flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#projects-pc">
         <p>Projects</p>
       </a>    
       <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#collabs">
-
         <p>Collabs</p>
       </a>    
       <a class="nav-link w-1/5 lg:h-12 flex items-center justify-center bg-none rounded-3xl px-2 py-3 text-[#082c65] text-xs lg:text-lg font-semibold lg:font-bold" href="#contact">
@@ -180,7 +182,7 @@
       </a>
     </div>
   </section>  
-  <section id="projects" class="projects-pc bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 hidden lg:flex flex-col gap-8 justify-center items-center pt-10 pb-14">
+  <section id="projects-pc" class="projects-pc bg-gradient-to-tr from-cyan-400 via-cyan-500 to-teal-200 rounded-3xl projects mt-10 mx-1 lg:mx-3 hidden lg:flex flex-col gap-8 justify-center items-center pt-10 pb-14">
 
     <h1 class="text-2xl lg:text-4xl font-bold mx-6 lg:mx-64">My Recent Work</h1>
     <p class="text-center lg:text-xl text-1 font-[poppins] mx-6 lg:mx-64">Here are a few past projects I've worked on. Want to see more? <a href="#" class="text-blue-600">Email me.</a></p>
@@ -383,7 +385,7 @@
       <!-- Submit -->
       <button 
         type="submit" 
-        class="bg-[#267194] text-white px-6 py-2 rounded-md hover:bg-blue-700"
+        class="bg-[#082c65] lg:mt-4 text-white px-6 py-2 rounded-3xl hover:bg-[#267194]"
       >
         Submit
       </button>
